# LLM-Observability

./: .env.example  .gitignore  ARCHITECTURE.md  DEVELOPMENT.md  PROJECT_REVIEW.md  README.md  docker-compose.yml  package.json  vercel.json
backend/: requirements.txt
backend/app/: __init__.py  alerting.py  consumer.py  main.py
backend/app/db/: models.py  session.py
backend/app/routers/: alerts.py  cost.py  latency.py  traces.py
dashboard/: Dockerfile  package-lock.json  package.json
dashboard/src/app/: globals.css  layout.js  page.js
dashboard/src/app/alerts/: page.js
dashboard/src/app/cost/: page.js
dashboard/src/app/latency/: page.js
dashboard/src/app/traces/: page.js
dashboard/src/components/: AlertBadge.js  Charts.js  MetricCard.js  Sidebar.js  TraceViewer.js
dashboard/src/lib/: api.js
examples/: basic_usage.py  demo.py  langchain_example.py  multi_agent_example.py
scripts/: seed_data.py
sdk/: README.md  pyproject.toml
sdk/llmobs/: __init__.py  context.py  cost.py  decorator.py  py.typed  queue.py  schema.py
