[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llmobs"
version = "0.1.0"
description = "Lightweight observability SDK for LLM applications — traces, costs, and latency in one decorator."
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "LLM Observability Team" },
]
keywords = ["llm", "observability", "tracing", "openai", "anthropic", "langchain"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.0",
    "redis>=5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "openai>=1.0",
    "ruff>=0.4",
    "mypy>=1.0",
]

[project.urls]
Homepage = "https://github.com/your-org/llmobs"
Documentation = "https://github.com/your-org/llmobs#readme"
Repository = "https://github.com/your-org/llmobs"
Issues = "https://github.com/your-org/llmobs/issues"

[tool.hatch.build.targets.wheel]
packages = ["llmobs"]

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "ANN", "B", "SIM", "RUF"]
ignore = ["ANN101", "ANN102", "ANN401"]

[tool.mypy]
python_version = "3.9"
strict = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
